register in working

--- a/app/public/css/register.css
+++ b/app/public/css/register.css
@@ -7,6 +7,10 @@ label, h1, h2, h3, h4 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+label {
+  color: #000;
+}
+
 #app {
   background-color: #fff !important;
   z-index: 99999999999;
