--- a/app/public/css/register.css
+++ b/app/public/css/register.css
@@ -5,11 +5,9 @@ label, h1, h2, h3, h4 {
 
   /*font-family: 'Encode Sans SC', sans-serif;*/
   font-family: 'Roboto Condensed', sans-serif;
-}
-
-label {
   color: #000;
 }
+
 
 #app {
   background-color: #fff !important;
@@ -274,4 +272,84 @@ input[type="checkbox"], input[type="radio"] {
 
 .mr18 {
   margin-right: 18px;
+}
+.successIcon i {
+  font-size: 60px;
+  padding: 20px;
+  color: green !important;
+  margin-bottom: 20px;
+}
+.option-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  position: relative;
+  top: 9.33333px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  transition: all 0.15s ease-out 0s;
+  background: #cbd1d8;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 0.5rem;
+  outline: none;
+  position: relative;
+  z-index: 1000;
+}
+
+.option-input:hover {
+  background: #9faab7;
+}
+
+.option-input:checked {
+  background: #283a6d;
+  border: none;
+}
+
+.option-input:checked::before {
+  height: 25px;
+  width: 25px;
+  content: '✔';
+  display: inline-block;
+  font-size: 17.66667px;
+  text-align: center;
+  line-height: 40px;
+  color: #fff;
+  border: none;
+  position: relative;
+  bottom: 7px;
+}
+
+.option-input:checked::after {
+  -webkit-animation: click-wave 0.65s;
+  -moz-animation: click-wave 0.65s;
+  animation: click-wave 0.65s;
+  background: #283a6d;
+  content: '';
+  display: block;
+  position: relative;
+  border: none;
+  z-index: 100;
+}
+
+.option-input.radio {
+  border-radius: 50%;
+}
+
+.option-input.radio::after {
+  border-radius: 50%;
+}
+
+.option-input:active, .option-input:focus-visible, .option-input::before {
+  border: none !important;
+  outline: none !important;
+  outline-color: transparent !important;
+  box-shadow: none !important;
 }
